--- a/chamber/styles/navigation-small.css
+++ b/chamber/styles/navigation-small.css
@@ -1,5 +1,5 @@
 :root{
-    --primary-color: #D4A017;
+    --primary-color: #d4a017;
     --secondary-color: black;
     --background-color: #F5F5F5;
     --text-color: #1F2933;
